r2e-compile-tests/cases/openfga/fail/fga_client_grant_wrong_subject.stderr
error[E0277]: the trait bound `Editor: DirectlyAssignable<(team::Ty, Member)>` is not satisfied
  --> cases/openfga/fail/fga_client_grant_wrong_subject.rs:28:29
   |
28 |     fga.grant(&eng_members, authz::document::editor, &doc).await.unwrap();
   |         -----               ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |         |
   |         required by a bound introduced by this call
   |
help: the trait `DirectlyAssignable<(team::Ty, Member)>` is not implemented for `Editor`
      but trait `DirectlyAssignable<authz::user::Ty>` is implemented for it
  --> cases/openfga/fail/fga_client_grant_wrong_subject.rs:8:1
   |
 8 | / r2e::r2e_openfga::model!(pub mod authz = inline r#"
 9 | | model
10 | |   schema 1.1
...  |
21 | |     define editor: [user]
22 | | "#);
   | |__^
   = help: for that trait implementation, expected `authz::user::Ty`, found `(team::Ty, Member)`
note: required by a bound in `FgaClient::grant`
  --> $WORKSPACE/r2e-openfga/src/client.rs
   |
   |     pub async fn grant<S, T, R>(
   |                  ----- required by a bound in this associated function
...
   |         R: DirectlyAssignable<S::Marker>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `FgaClient::grant`
   = note: this error originates in the macro `r2e::r2e_openfga::model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Editor: DirectlyAssignable<(team::Ty, Member)>` is not satisfied
  --> cases/openfga/fail/fga_client_grant_wrong_subject.rs:28:5
   |
28 |     fga.grant(&eng_members, authz::document::editor, &doc).await.unwrap();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `DirectlyAssignable<(team::Ty, Member)>` is not implemented for `Editor`
      but trait `DirectlyAssignable<authz::user::Ty>` is implemented for it
  --> cases/openfga/fail/fga_client_grant_wrong_subject.rs:8:1
   |
 8 | / r2e::r2e_openfga::model!(pub mod authz = inline r#"
 9 | | model
10 | |   schema 1.1
...  |
21 | |     define editor: [user]
22 | | "#);
   | |__^
   = help: for that trait implementation, expected `authz::user::Ty`, found `(team::Ty, Member)`
note: required by a bound in `FgaClient::grant`
  --> $WORKSPACE/r2e-openfga/src/client.rs
   |
   |     pub async fn grant<S, T, R>(
   |                  ----- required by a bound in this associated function
...
   |         R: DirectlyAssignable<S::Marker>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `FgaClient::grant`
   = note: this error originates in the macro `r2e::r2e_openfga::model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Editor: DirectlyAssignable<(team::Ty, Member)>` is not satisfied
  --> cases/openfga/fail/fga_client_grant_wrong_subject.rs:28:60
   |
28 |     fga.grant(&eng_members, authz::document::editor, &doc).await.unwrap();
   |                                                            ^^^^^ unsatisfied trait bound
   |
help: the trait `DirectlyAssignable<(team::Ty, Member)>` is not implemented for `Editor`
      but trait `DirectlyAssignable<authz::user::Ty>` is implemented for it
  --> cases/openfga/fail/fga_client_grant_wrong_subject.rs:8:1
   |
 8 | / r2e::r2e_openfga::model!(pub mod authz = inline r#"
 9 | | model
10 | |   schema 1.1
...  |
21 | |     define editor: [user]
22 | | "#);
   | |__^
   = help: for that trait implementation, expected `authz::user::Ty`, found `(team::Ty, Member)`
note: required by a bound in `FgaClient::grant`
  --> $WORKSPACE/r2e-openfga/src/client.rs
   |
   |     pub async fn grant<S, T, R>(
   |                  ----- required by a bound in this associated function
...
   |         R: DirectlyAssignable<S::Marker>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `FgaClient::grant`
   = note: this error originates in the macro `r2e::r2e_openfga::model` (in Nightly builds, run with -Z macro-backtrace for more info)
